[gd_scene load_steps=10 format=2]

[ext_resource path="res://Components/Device/bar.gd" type="Script" id=1]
[ext_resource path="res://Sprites/ui_symbole_anti-m.png" type="Texture" id=2]
[ext_resource path="res://Sprites/ui_symbole_energy.png" type="Texture" id=3]
[ext_resource path="res://Sprites/ui_symbole_matter.png" type="Texture" id=4]
[ext_resource path="res://Sprites/ui_device_energy_bar.png" type="Texture" id=5]
[ext_resource path="res://Sprites/ui_device_excess_bar.png" type="Texture" id=6]
[ext_resource path="res://Sprites/ui_device_excess_bar_off.png" type="Texture" id=7]
[ext_resource path="res://white_pixel.png.png" type="Texture" id=8]
[ext_resource path="res://Sprites/ui_device_discarge_bar.png" type="Texture" id=9]

[node name="bar" type="Node2D"]
script = ExtResource( 1 )

[node name="bar" type="Sprite" parent="."]
visible = false
modulate = Color( 0.87451, 0.443137, 0.14902, 1 )
position = Vector2( 2, 1 )
scale = Vector2( 11, 3 )
texture = ExtResource( 8 )
centered = false

[node name="ui_device_discarge_bar" type="Sprite" parent="."]
visible = false
modulate = Color( 0.643137, 0.27451, 0.0196078, 1 )
position = Vector2( 2, 1 )
texture = ExtResource( 9 )
centered = false
region_enabled = true
region_rect = Rect2( 2, 0, 11, 3 )

[node name="ui_device_excess_bar" type="Sprite" parent="."]
visible = false
modulate = Color( 0.294118, 0.411765, 0.184314, 1 )
texture = ExtResource( 6 )
centered = false

[node name="ui_device_energy_bar" type="Sprite" parent="."]
visible = false
modulate = Color( 0.294118, 0.411765, 0.184314, 1 )
texture = ExtResource( 5 )
centered = false

[node name="ui_symbole_matter" type="Sprite" parent="."]
visible = false
position = Vector2( 26, 0 )
texture = ExtResource( 4 )
centered = false

[node name="ui_symbole_energy" type="Sprite" parent="."]
visible = false
position = Vector2( 26, 0 )
texture = ExtResource( 3 )
centered = false

[node name="ui_symbole_antim" type="Sprite" parent="."]
visible = false
position = Vector2( 26, 0 )
texture = ExtResource( 2 )
centered = false

[node name="ui_device_excess_bar_off" type="Sprite" parent="."]
modulate = Color( 0.294118, 0.411765, 0.184314, 1 )
texture = ExtResource( 7 )
centered = false
